--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ strategy:
   matrix:
     Python39:
       python.version: '3.9'
-    Python311:
-      python.version: '3.11'
+    # Python311:
+    #   python.version: '3.11'
 
 steps:
 - task: UsePythonVersion@0
@@ -37,4 +37,4 @@ steps:
     azureSubscription: 'julia-test-service-conn-workflow-identity'
     appType: 'webAppLinux'
     WebAppName: 'ceb-pipelines-flask-webapp'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**'
