--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
       python -m pip install --upgrade pip
       pip install setup
       pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
-    workingDirectory: $(projectRoot)
+    workingDirectory: $(Build.SourcesDirectory)
     displayName: "Install requirements"
 
   - task: ArchiveFiles@2
