--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,4 +50,4 @@ steps:
       azureSubscription: 'julia-test-service-conn-workflow-identity'
       appType: 'webAppLinux'
       WebAppName: 'ceb-pipelines-flask-webapp'
-      packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+      packageForLinux: '$(System.DefaultWorkingDirectory)/*.zip'
